--- a/htmls/index.html
+++ b/htmls/index.html
@@ -9,56 +9,56 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../stylesheets/media.css">
     <link rel="stylesheet" href="../stylesheets/index.css">
+
 </head>
 <body>
 <header>
     <p id="logo">Lana Del Rey</p>
-    <nav class="navbar-expand-md navbar-light">
+    <nav class="navbar-expand-lg navbar-light">
         <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapse_target">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Main</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="news.html">News</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">For fans</a>
-                <ul id="for_fans">
-                    <li id="first_hover"><a href="index.html">Fans club</a></li>
-                    <li><a href="index.html">Tour schedule</a></li>
-                    <li><a href="index.html">Lyrics</a></li>
-                </ul>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Fans appeal</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Concert venue</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Admin</a>
-            </li>
-        </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Main</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="news.html">News</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">For fans</a>
+                    <ul id="for_fans">
+                        <li id="first_hover"><a href="index.html">Fans club</a></li>
+                        <li><a href="index.html">Tour schedule</a></li>
+                        <li><a href="index.html">Lyrics</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Fans appeal</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Concert venue</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Admin</a>
+                </li>
+            </ul>
         </div>
     </nav>
 </header>
 <main>
 
     <section id="photos">
-        <img class="main_photo" src="../images/Lana-new-press-shot-3_main_2.jpg" width="260" height="260" alt="">
+        <img class="main_photo" src="../images/Lana-new-press-shot-3_main_2.jpg" width="30%" height="30%" alt="">
         <img class="main_photo" src="../images/Lana-Del-Rey1.jpg" width="58%" height="32%" alt="">
     </section>
 
     <section>
         <h3 align="center">About artist</h3>
         <article>
-            <img align="left" class="left_photo" src="../images/Lana_Del_Rey3.jpg" width="212" height="260">
+            <img align="left" class="left_photo" src="../images/Lana_Del_Rey3.jpg" width="29.25%" height="36%">
             <article>
                 <p>
                     Elizabeth Woolridge Grant (born June 21, 1985), known professionally as Lana Del Rey, is an
@@ -99,7 +99,7 @@
         <h3 align="center">Best album</h3>
         <article>
             <img align="left" class="left_photo" src="../images/Lana_del_rey-born_to_die-cover_album.jpg"
-                 width="260" height="260">
+                 width="36%" height="36%">
             <article>
                 <p>
                     Born to Die is the second studio album and major label debut by American singer-songwriter Lana Del
