--- a/htmls/tour_schedule.html
+++ b/htmls/tour_schedule.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../stylesheets/common.css">
-    <link rel="stylesheet" href="../stylesheets/news.css">
+    <link rel="stylesheet" href="../stylesheets/tour_schedule.css">
 
 </head>
 <body>
@@ -51,41 +50,36 @@
     </nav>
 </header>
 <main>
-    <div class="card">
-        <img src="../images/Lana-Del-Rey-Press-Shot.jpeg" alt="">
-        <h6>Lana Del Rey reveals new album White Hot Forever will be released in 2020</h6>
-        <p>Artist has just released her latest record 'Norman F***ing Rockwell',
-            which she co-produced with Jack Antonoff</p>
-    </div>
-    <div class="card">
-        <img src="../images/lana-del-rey-new-album.jpg"alt="">
-        <h6>Lana Del Rey new album: Release date and tracklist
-            for ‘Norman F****** Rockwell’ revealed</h6>
-        <p>
-            The artist has unveiled the new record’s Titanic-inspired
-            cover art starring Jack Nicholson’s grandson</p>
-    </div>
-    <div class="card">
-        <img src="../images/gettyimages-1057181644.jpg" alt="">
-        <h6>Lana Del Rey stars in new Gucci Guilty campaign</h6>
-        <p>Gucci Beauty has released a new short film for their Gucci Guilty fragrance.</p>
-    </div>
-    <div class="card">
-        <img src="../images/black-futures.jpg" alt="">
-        <h6>Now Hear This: Black Futures, Lana Del Rey, Kano and Ezra Furman</h6>
-        <p>In her weekly column, our music correspondent goes through
-            the best – and worst – releases of the week</p>
-    </div>
-    <div class="card">
-        <img src="../images/lana-del-rey.jpg" alt="">
-        <h6>Lana Del Rey, George Ezra and Snow Patrol headlining Latitude festival</h6>
-        <p>The two-time winner of the UK Best Major Festival Award takes place in July</p>
-    </div>
-    <div class="card">
-        <img src="../images/lana-del-rey-israel.jpg" alt="">
-        <h6>Lana Del Rey cancels Israeli music festival performance after backlash</h6>
-        <p>It's important to me to perform in both Palestine and Israel and treat all my fans equally</p>
-    </div>
+    <img class="img-fluid rounded mx-auto d-block" src="../images/Lana-Del-Rey1.jpg"
+         width="50%" height="25%" alt="">
+    <h4 align="center">Tour schedule</h4>
+    <table class="table alert-light table-bordered">
+        <tr>
+            <th scope="col">Date of performance</th>
+            <th scope="col">City</th>
+            <th scope="col">Performance time</th>
+        </tr>
+        <tr>
+            <td>09.10.19</td>
+            <td>Lviv</td>
+            <td>19:00</td>
+        </tr>
+        <tr>
+            <td>15.10.19</td>
+            <td>Kyiv</td>
+            <td>19:30</td>
+        </tr>
+        <tr>
+            <td>20.10.19</td>
+            <td>Krakiv</td>
+            <td>18:30</td>
+        </tr>
+        <tr>
+            <td>25.09.19</td>
+            <td>Warsaw</td>
+            <td>18:45</td>
+        </tr>
+    </table>
 </main>
 <footer>
     <p align="center">Made by <b>Mariia Mostova</b></p>
