News page is edited

--- a/htmls/tour_schedule.html
+++ b/htmls/tour_schedule.html
@@ -81,9 +81,11 @@
         </tr>
     </table>
 </main>
-<footer>
-    <p align="center">Made by <b>Mariia Mostova</b></p>
-    <p align="center"><b>2019</b></p>
+<footer class="page-footer">
+    <div class="container-fluid text-center">
+        <p align="center">Made by <b>Mariia Mostova</b></p>
+        <p align="center"><b>2019</b></p>
+    </div>
 </footer>
 </body>
 </html>
