--- a/htmls/concert_venue.html
+++ b/htmls/concert_venue.html
@@ -52,7 +52,7 @@
 <main>
     <h3 align="center">The place of the next concert</h3>
     <div class="container">
-        <div class="row embed-responsive embed-responsive-16by9">
+        <div class="row embed-responsive embed-responsive-21by9">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2572.9170197710564!2d24.02402361522867!3d49.844016679396304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add72f9bc6a89%3A0xf9783fecb4fecf1f!2z0JvRjNCy0ZbQstGB0YzQutC40Lkg0J3QsNGG0ZbQvtC90LDQu9GM0L3QuNC5INCQ0LrQsNC00LXQvNGW0YfQvdC40Lkg0YLQtdCw0YLRgCDQvtC_0LXRgNC4INGC0LAg0LHQsNC70LXRgtGDINGW0LwuINCh0L7Qu9C-0LzRltGXINCa0YDRg9GI0LXQu9GM0L3QuNGG0YzQutC-0Zc!5e0!3m2!1suk!2sua!4v1570468463744!5m2!1suk!2sua"
                     width="100%" height="50%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
@@ -72,7 +72,7 @@
     </div>
 </main>
 <footer class="page-footer">
-    <div class="container-fluid text-center text-md-left">
+    <div class="container-fluid text-center">
         <p align="center">Made by <b>Mariia Mostova</b></p>
         <p align="center"><b>2019</b></p>
     </div>
