--- a/htmls/fans_appeal.html
+++ b/htmls/fans_appeal.html
@@ -103,7 +103,7 @@
     </div>
 </main>
 <footer class="page-footer">
-    <div class="container-fluid text-center text-md-left">
+    <div class="container-fluid text-center">
         <p align="center">Made by <b>Mariia Mostova</b></p>
         <p align="center"><b>2019</b></p>
     </div>
