--- a/htmls/index.html
+++ b/htmls/index.html
@@ -127,9 +127,11 @@
         </article>
     </section>
 </main>
-<footer>
-    <p align="center">Made by <b>Mariia Mostova</b></p>
-    <p align="center"><b>2019</b></p>
+<footer class="page-footer">
+    <div class="container-fluid text-center">
+        <p align="center">Made by <b>Mariia Mostova</b></p>
+        <p align="center"><b>2019</b></p>
+    </div>
 </footer>
 </body>
 </html>
