--- a/htmls/news.html
+++ b/htmls/news.html
@@ -50,46 +50,62 @@
         </div>
     </nav>
 </header>
-<main>
-    <div class="card">
-        <img src="../images/Lana-Del-Rey-Press-Shot.jpeg" alt="">
-        <h6>Lana Del Rey reveals new album White Hot Forever will be released in 2020</h6>
-        <p>Artist has just released her latest record 'Norman F***ing Rockwell',
-            which she co-produced with Jack Antonoff</p>
+<div class="main container container-fluid">
+    <div class="row">
+        <div class=" col-lg-4 col-md-6 col-sm-12">
+          <div class="card embed-responsive-item">
+            <img src="../images/Lana-Del-Rey-Press-Shot.jpeg" alt="">
+            <h6>Lana Del Rey reveals new album White Hot Forever will be released in 2020</h6>
+            <p>Artist has just released her latest record 'Norman F***ing Rockwell',
+                which she co-produced with Jack Antonoff</p>
+          </div>
+        </div>
+        <div class=" col-lg-4 col-md-6 col-sm-12">
+            <div class="card embed-responsive-item">
+                <img src="../images/lana-del-rey-new-album.jpg"alt="">
+                <h6>Lana Del Rey new album: Release date and tracklist
+                    for ‘Norman F****** Rockwell’ revealed</h6>
+                <p>
+                    The artist has unveiled the new record’s Titanic-inspired
+                    cover art starring Jack Nicholson’s grandson</p>
+            </div>
+        </div>
+        <div class=" col-lg-4 col-md-6 col-sm-12">
+            <div class="card embed-responsive-item">
+                <img src="../images/gettyimages-1057181644.jpg" alt="">
+                <h6>Lana Del Rey stars in new Gucci Guilty campaign</h6>
+                <p>Gucci Beauty has released a new short film for their Gucci Guilty fragrance.</p>
+            </div>
+        </div>
+        <div class=" col-lg-4 col-md-6 col-sm-12">
+            <div class="card embed-responsive-item">
+                <img src="../images/black-futures.jpg" alt="">
+                <h6>Now Hear This: Black Futures, Lana Del Rey, Kano and Ezra Furman</h6>
+                <p>In her weekly column, our music correspondent goes through
+                    the best – and worst – releases of the week</p>
+            </div>
+        </div>
+        <div class=" col-lg-4 col-md-6 col-sm-12">
+            <div class="card embed-responsive-item">
+                <img src="../images/lana-del-rey.jpg" alt="">
+                <h6>Lana Del Rey, George Ezra and Snow Patrol headlining Latitude festival</h6>
+                <p>The two-time winner of the UK Best Major Festival Award takes place in July</p>
+            </div>
+        </div>
+        <div class=" col-lg-4 col-md-6 col-sm-12">
+            <div class="card embed-responsive-item">
+                <img src="../images/lana-del-rey-israel.jpg" alt="">
+                <h6>Lana Del Rey cancels Israeli music festival performance after backlash</h6>
+                <p>It's important to me to perform in both Palestine and Israel and treat all my fans equally</p>
+            </div>
+        </div>
     </div>
-    <div class="card">
-        <img src="../images/lana-del-rey-new-album.jpg"alt="">
-        <h6>Lana Del Rey new album: Release date and tracklist
-            for ‘Norman F****** Rockwell’ revealed</h6>
-        <p>
-            The artist has unveiled the new record’s Titanic-inspired
-            cover art starring Jack Nicholson’s grandson</p>
+</div>
+<footer class="page-footer">
+    <div class="container-fluid text-center">
+        <p align="center">Made by <b>Mariia Mostova</b></p>
+        <p align="center"><b>2019</b></p>
     </div>
-    <div class="card">
-        <img src="../images/gettyimages-1057181644.jpg" alt="">
-        <h6>Lana Del Rey stars in new Gucci Guilty campaign</h6>
-        <p>Gucci Beauty has released a new short film for their Gucci Guilty fragrance.</p>
-    </div>
-    <div class="card">
-        <img src="../images/black-futures.jpg" alt="">
-        <h6>Now Hear This: Black Futures, Lana Del Rey, Kano and Ezra Furman</h6>
-        <p>In her weekly column, our music correspondent goes through
-            the best – and worst – releases of the week</p>
-    </div>
-    <div class="card">
-        <img src="../images/lana-del-rey.jpg" alt="">
-        <h6>Lana Del Rey, George Ezra and Snow Patrol headlining Latitude festival</h6>
-        <p>The two-time winner of the UK Best Major Festival Award takes place in July</p>
-    </div>
-    <div class="card">
-        <img src="../images/lana-del-rey-israel.jpg" alt="">
-        <h6>Lana Del Rey cancels Israeli music festival performance after backlash</h6>
-        <p>It's important to me to perform in both Palestine and Israel and treat all my fans equally</p>
-    </div>
-</main>
-<footer>
-    <p align="center">Made by <b>Mariia Mostova</b></p>
-    <p align="center"><b>2019</b></p>
 </footer>
 </body>
 </html>
