--- a/htmls/concert_venue.html
+++ b/htmls/concert_venue.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      manifest = "../cache.manifest">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lana Del Rey</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../stylesheets/common.css">
     <link rel="stylesheet" href="../stylesheets/concert_venue.css">
 
@@ -59,7 +57,7 @@
         <div class="row card">
             <p>
                 Lviv Theatre of Opera and Ballet<br/>
-                Addres: Svobody av., 28<br/>
+                Address: Svobody av., 28<br/>
                 PHONE FOR INQUIRIES<br/>
                 +380 (32) 235-65-86<br/>
                 E-MAIL<br/>
