--- a/htmls/news.html
+++ b/htmls/news.html
@@ -47,7 +47,7 @@
         </div>
     </nav>
 </header>
-<div class="main container container-fluid">
+<div class="main container container-fluid" id="main">
     <div class="row">
         <div class=" col-lg-4 col-md-6 col-sm-12">
           <div class="card embed-responsive-item">
@@ -104,6 +104,8 @@
         <p align="center"><b>2019</b></p>
     </div>
 </footer>
+<script src="../javascripts/news.js"></script>
+<script src="../javascripts/fans_appeal.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
