--- a/htmls/news.html
+++ b/htmls/news.html
@@ -48,7 +48,7 @@
     </nav>
 </header>
 <div class="main container container-fluid" id="main">
-    <div class="row">
+    <div class="row" id="row">
         <div class=" col-lg-4 col-md-6 col-sm-12">
           <div class="card embed-responsive-item">
             <img src="../images/Lana-Del-Rey-Press-Shot.jpeg" alt="">
@@ -104,8 +104,6 @@
         <p align="center"><b>2019</b></p>
     </div>
 </footer>
-<script src="../javascripts/news.js"></script>
-<script src="../javascripts/fans_appeal.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -116,5 +114,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+<script src="../javascripts/news.js"></script>
+<script src="../javascripts/fans_appeal.js"></script>
 </body>
 </html>
