--- a/htmls/admin.html
+++ b/htmls/admin.html
@@ -73,6 +73,7 @@
         <p align="center"><b>2019</b></p>
     </div>
 </footer>
+<script src="../javascripts/db.js"></script>
 <script src="../javascripts/admin.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
