--- a/htmls/fans_appeal.html
+++ b/htmls/fans_appeal.html
@@ -109,6 +109,7 @@
         <p align="center"><b>2019</b></p>
     </div>
 </footer>
+<script src="../javascripts/db.js"></script>
 <script src="../javascripts/fans_appeal.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.js"
